# socket

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
docs/: README_DIST.md
scripts/: build.sh  clean.sh
src/: a.out  client  client.cpp  server  server.cpp
